force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_Category__c.field-meta.xml
<CustomField>
    <fullName>FSM_Category__c</fullName>
    <description>Created for SAL-1321</description>
    <label>Meter Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FSM_ModelNo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diehl_Altair_V4_5D_D05_15MM</fullName>
            </value>
            <value>
                <fullName>Diehl_Altair_V4_5D_D05_22MM</fullName>
            </value>
            <value>
                <fullName>Diehl_Altair_V4_5D_D05_28MM</fullName>
            </value>
            <value>
                <fullName>Diehl_Altair_V4_5D_D05_42MM</fullName>
            </value>
            <value>
                <fullName>Diehl_Altair_V4_5D_D85_15MM</fullName>
            </value>
            <value>
                <fullName>Diehl_Altair_V4_5D_D85_22MM</fullName>
            </value>
            <value>
                <fullName>Diehl_Altair_V4_5D_D85_28MM</fullName>
            </value>
            <value>
                <fullName>Diehl_Altair_V4_5D_D85_42MM</fullName>
            </value>
            <value>
                <fullName>ITRON AQUADIS+_5D_15MM</fullName>
            </value>
            <value>
                <fullName>ITRON_AQUADIS+_5D_22MM</fullName>
            </value>
            <value>
                <fullName>ITRON AQUADIS+INT_5D_15MM</fullName>
            </value>
            <value>
                <fullName>ITRON AQUADIS+INT_5D_22MM</fullName>
            </value>
            <value>
                <fullName>ITRON_AQUADIS+INT_5D_28MM</fullName>
            </value>
            <value>
                <fullName>ITRON_SINGLE_JET_6D_42MM</fullName>
            </value>
            <value>
                <fullName>ITRON_SINGLE_JET_THREADED_6D_50MM</fullName>
            </value>
            <value>
                <fullName>ITRON_SINGLE_JET_FLANGED_6D_50MM</fullName>
            </value>
            <value>
                <fullName>ITRON_SINGLE_JET_FLANGED_6D_80MM</fullName>
            </value>
            <value>
                <fullName>ITRON_SINGLE_JET_FLANGED_6D_100MM</fullName>
            </value>
            <value>
                <fullName>ITRON_SINGLE_JET_INT_5D_42MM</fullName>
            </value>
            <value>
                <fullName>ITRON_WOLTEX_6D_50MM</fullName>
            </value>
            <value>
                <fullName>ITRON_WOLTEX_6D_80MM</fullName>
            </value>
            <value>
                <fullName>ITRON_WOLTEX_6D_100MM</fullName>
            </value>
            <value>
                <fullName>ITRON_WOLTEX_7D_150MM</fullName>
            </value>
            <value>
                <fullName>ITRON_WOLTEX_7D_200MM</fullName>
            </value>
            <value>
                <fullName>Kent_K05_5D</fullName>
            </value>
            <value>
                <fullName>Radio_Actaris_R05_5D</fullName>
            </value>
            <value>
                <fullName>Radio_Actaris_R85_5D</fullName>
            </value>
            <value>
                <fullName>Schlumberger_S05_5D</fullName>
            </value>
            <value>
                <fullName>Schlumberger_S85_5D</fullName>
            </value>
            <value>
                <fullName>Diehl_Wesan_PG_6D_D06_50MM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>