force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_City__c.field-meta.xml
<CustomField>
    <fullName>FSM_City__c</fullName>
    <description>Created for SFS-1321</description>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>