force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_Comments__c.field-meta.xml
<CustomField>
    <fullName>FSM_Comments__c</fullName>
    <description>Created as part of SFS-1325</description>
    <label>Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>