force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_CommentsForAllValves__c.field-meta.xml
<CustomField>
    <fullName>FSM_CommentsForAllValves__c</fullName>
    <description>Created for SAL-1321</description>
    <label>Comments for all valves</label>
    <type>TextArea</type>
</CustomField>