force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_CommentsForBoppsTeam__c.field-meta.xml
<CustomField>
    <fullName>FSM_CommentsForBoppsTeam__c</fullName>
    <label>Comments for Bopps team</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>