force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_CommentsForTheGangs__c.field-meta.xml
<CustomField>
    <fullName>FSM_CommentsForTheGangs__c</fullName>
    <inlineHelpText>Dynamic box that populates on the sketch (able to move on sketch) (Box need to have a specific outline colour blue)</inlineHelpText>
    <label>Comments for the Gangs</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>