force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_CommentsOnTheCause__c.field-meta.xml
<CustomField>
    <fullName>FSM_CommentsOnTheCause__c</fullName>
    <description>SFS-1319</description>
    <label>Comments on the cause, including details</label>
    <length>80</length>
    <type>Text</type>
</CustomField>