force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_CommsMethod__c.field-meta.xml
<CustomField>
    <fullName>FSM_CommsMethod__c</fullName>
    <description>Created as part of sfs-6000</description>
    <label>Comm&apos;s Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Letter &amp; Text</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>