force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_CompanyName__c.field-meta.xml
<CustomField>
    <fullName>FSM_CompanyName__c</fullName>
    <description>SFS-1319</description>
    <label>Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>