force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ConfinedSpaceWorking__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConfinedSpaceWorking__c</fullName>
    <inlineHelpText>Please refer to SSOW on waterpedia</inlineHelpText>
    <label>Confined space working</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>