force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ConfirmedPollutionComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConfirmedPollutionComments__c</fullName>
    <label>Confirmed Pollution Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>