force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ConstructYear__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConstructYear__c</fullName>
    <description>Created for SAL-1321</description>
    <label>Contrust Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>