force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ContactName__c.field-meta.xml
<CustomField>
    <fullName>FSM_ContactName__c</fullName>
    <description>SFS-1319</description>
    <label>Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>