force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_Contamination__c.field-meta.xml
<CustomField>
    <fullName>FSM_Contamination__c</fullName>
    <inlineHelpText>Is there a risk of contamination please state below and contact Network Control immediately to mitigate any risk to the environment</inlineHelpText>
    <label>Contamination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>