force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ContaminationComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_ContaminationComments__c</fullName>
    <label>Contamination Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>