force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ContractorAnotherCompany__c.field-meta.xml
<CustomField>
    <fullName>FSM_ContractorAnotherCompany__c</fullName>
    <description>SFS-1319</description>
    <label>Is the Contractor working on the behalf</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>