force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ContractorHouseNo__c.field-meta.xml
<CustomField>
    <fullName>FSM_ContractorHouseNo__c</fullName>
    <description>SFS-1319</description>
    <label>Contractor&apos;s House No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>