force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ContractorLocationOfDamage__c.field-meta.xml
<CustomField>
    <fullName>FSM_ContractorLocationOfDamage__c</fullName>
    <label>Is the location of the damage in the are</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>