force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ContractorName__c.field-meta.xml
<CustomField>
    <fullName>FSM_ContractorName__c</fullName>
    <description>SFS-1319</description>
    <label>Contractor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>