force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ContractorRegistration__c.field-meta.xml
<CustomField>
    <fullName>FSM_ContractorRegistration__c</fullName>
    <description>SFS-1319</description>
    <label>3rd Party Vehicle Registration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>