force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ContractorStreet__c.field-meta.xml
<CustomField>
    <fullName>FSM_ContractorStreet__c</fullName>
    <label>Contractor&apos;s Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>