force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ContractorTelephone__c.field-meta.xml
<CustomField>
    <fullName>FSM_ContractorTelephone__c</fullName>
    <description>SFS-1319 Updated sfs-5424</description>
    <label>Contractor&apos;s Telephone</label>
    <type>Phone</type>
</CustomField>