force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_CustomerPresent__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerPresent__c</fullName>
    <description>SFS-1320</description>
    <inlineHelpText>Select One</inlineHelpText>
    <label>Customer Present</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Customer Rep</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>