force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_CustomersIssuesResolved__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomersIssuesResolved__c</fullName>
    <description>Created as a part of SFS-1314</description>
    <label>Customer’s issues have now been resolved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>