force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_CustomerSpoken__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerSpoken__c</fullName>
    <description>Created as a part of SFS-1314</description>
    <label>Name of Customer spoken to on phone?</label>
    <length>150</length>
    <type>Text</type>
</CustomField>