force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_CustShownLocation__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustShownLocation__c</fullName>
    <description>Created as a part of SFS-3041</description>
    <label>Customer shown location of meter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>