force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_Cycle__c.field-meta.xml
<CustomField>
    <fullName>FSM_Cycle__c</fullName>
    <inlineHelpText>Is there any cycle impact onsite</inlineHelpText>
    <label>Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Cycle Lane</fullName>
            </value>
            <value>
                <fullName>Cycle route</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>