force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_Date__c.field-meta.xml
<CustomField>
    <fullName>FSM_Date__c</fullName>
    <description>No longer required</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>