force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_DateAndTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_DateAndTime__c</fullName>
    <description>Created as part of SFS-1325, SFS-2982</description>
    <label>Date and Time</label>
    <type>DateTime</type>
</CustomField>