force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_DateHire__c.field-meta.xml
<CustomField>
    <fullName>FSM_DateHire__c</fullName>
    <description>Created as a part of SFS-2996</description>
    <label>Date of Hire</label>
    <type>Date</type>
</CustomField>