force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_DateLoggerTested__c.field-meta.xml
<CustomField>
    <fullName>FSM_DateLoggerTested__c</fullName>
    <description>Created as part of SFS-2982</description>
    <label>Date Logger was tested?</label>
    <type>DateTime</type>
</CustomField>