force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_DateMeterInstalled__c.field-meta.xml
<CustomField>
    <fullName>FSM_DateMeterInstalled__c</fullName>
    <description>Created for SAL-1321</description>
    <label>Date Meter Installed</label>
    <type>Date</type>
</CustomField>