force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_DateOutreaderInstalled__c.field-meta.xml
<CustomField>
    <fullName>FSM_DateOutreaderInstalled__c</fullName>
    <description>Created for SAL-1321</description>
    <label>Date Outreader Installed</label>
    <type>Date</type>
</CustomField>