force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_DeductionReason2__c.field-meta.xml
<CustomField>
    <fullName>FSM_DeductionReason2__c</fullName>
    <description>Created as a part of SFS-1314</description>
    <label>Hard standing area Deduction reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>