force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_Depth__c.field-meta.xml
<CustomField>
    <fullName>FSM_Depth__c</fullName>
    <description>SFS-1318</description>
    <label>Depth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>1.0</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
            <value>
                <fullName>2.5</fullName>
            </value>
            <value>
                <fullName>3.0</fullName>
            </value>
            <value>
                <fullName>3.5</fullName>
            </value>
            <value>
                <fullName>4.0</fullName>
            </value>
            <value>
                <fullName>4.5</fullName>
            </value>
            <value>
                <fullName>5.0</fullName>
            </value>
            <value>
                <fullName>5.5</fullName>
            </value>
            <value>
                <fullName>6.0</fullName>
            </value>
            <value>
                <fullName>6.5</fullName>
            </value>
            <value>
                <fullName>7.0</fullName>
            </value>
            <value>
                <fullName>7.5</fullName>
            </value>
            <value>
                <fullName>8.0</fullName>
            </value>
            <value>
                <fullName>8.5</fullName>
            </value>
            <value>
                <fullName>9.0</fullName>
            </value>
            <value>
                <fullName>9.5</fullName>
            </value>
            <value>
                <fullName>10.0</fullName>
            </value>
            <value>
                <fullName>Site combined with another site</fullName>
            </value>
            <value>
                <fullName>Site subsumed by third party reinstatement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>