force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_DepthOfCover__c.field-meta.xml
<CustomField>
    <fullName>FSM_DepthOfCover__c</fullName>
    <description>Created as a part of SFS-2996</description>
    <label>Depth of cover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>