force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_DetailsOfProposedWork__c.field-meta.xml
<CustomField>
    <fullName>FSM_DetailsOfProposedWork__c</fullName>
    <description>SFS-3010
undeleted as part of SFS-5312</description>
    <label>Details of proposed work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>