force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_DiggerNo__c.field-meta.xml
<CustomField>
    <fullName>FSM_DiggerNo__c</fullName>
    <label>Digger - Insert Digger No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>