force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_DoesTheRemoteFunctionWorkCorrectly__c.field-meta.xml
<CustomField>
    <fullName>FSM_DoesTheRemoteFunctionWorkCorrectly__c</fullName>
    <description>Created as part of SFS-5319</description>
    <label>Does the remote function work correctly?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>