force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_DSACATCalibrationDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_DSACATCalibrationDateAndTime__c</fullName>
    <description>Created as part of SFS-2982</description>
    <label>CAT calibration Date and Time</label>
    <type>DateTime</type>
</CustomField>