force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_DSASampleLabelAvailability__c.field-meta.xml
<CustomField>
    <fullName>FSM_DSASampleLabelAvailability__c</fullName>
    <description>Created as part of SFS-2982</description>
    <inlineHelpText>Select One</inlineHelpText>
    <label>Sample Label Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>