force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_EfficiencyCheckCompleted__c.field-meta.xml
<CustomField>
    <fullName>FSM_EfficiencyCheckCompleted__c</fullName>
    <description>SFS-1320</description>
    <label>Water Efficiency Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>