force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_EmergencyTowingVehicle__c.field-meta.xml
<CustomField>
    <fullName>FSM_EmergencyTowingVehicle__c</fullName>
    <label>Emergency trailer board  towing vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>