force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_EngineersRequired__c.field-meta.xml
<CustomField>
    <fullName>FSM_EngineersRequired__c</fullName>
    <label>Engineers Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>